	* lib/termios.  Implemented tcsetattr() and tcgetattr().
	* lib/stdio/lib_fgets.c:  The old fgets includes some terminal related
	  functionality:  It handles VT-100 commands, includes a command line editor
	  and echo characters back to the terminal.  This old, overloaded fgets()
	  was renamed readline() and moved to apps/system/readline.  The version
	  of fgets() in lib/stdio was them simplified and stripped down so that it
	  *only* gets a string -- as its description implies.
	* arch/arm/src/lpc214x/lpc214x_usbdev.c:  Add corrections suggested by
	  David Hewson many, many months ago.
	* configs/mcu123-lpc214x/composite and configs/mcu123-lpc214x/src/up_composite.c:
	  Add a configuration to test the USB composite device.
	* configs/stm3240g-eval/telnetd:  Add a configuration for testing the
	  Telnet daemon.
	* configs/stm3240g-eval/nsh2:  This is another NSH configuration.  It differs
	  from the original nsh configuration because it does not have an RS-232
	  console (only a Telnet console) and SDIO is enabled.  This configuration is
	  required because the STM3240G-EVAL board cannot simultaneously support
	  RS-232 and SDIO due to pin conflicts.
	* lib/string/lib_strcasestr.c:  Add strcasestr().
	* lib/stdio/lib_avsprintf.c:  Add avsprintf().
	* lib/net/lib_inetntop.c:  Add inet_ntop().
	* lib/net/lib_inetpton.c:  Add inet_pton().
	* include/pthread.h:  Correct PTHREAD_MUTEX_INITIALIZER.
	* fs/fat/fs_fatfs.c:  Fix and error in the FAT statfs() implementation that
	  was causing some block counts to be reported incorrectly (reported by
	  David Sidrane).
	* drivers/ramlog.c:  Add a character driver that can substitute
	  for /dev/console and or be used for logging debug output when there
	  is no serial port available (such as when a telnet console is used).
	* lib/stdio/lib_syslogstream:  Add a stream object that will be used to
	  re-direct all debug output to the RAM log if CONFIG_SYSLOG and
	  CONFIG_RAMLOG_SYSLOG are defined.
